--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,20 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-*.DS_STORE
-build/
-.cache
-.vagrant
-.sass-cache
+# Dependencies
+/node_modules
 
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-.idea/
+# Production
+/build
 
-# Vagrant artifacts
-ubuntu-*-console.log
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
