--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@docusaurus/core": ">=2.4.1 <=2.4.3",
     "@docusaurus/preset-classic": ">=2.4.1 <=2.4.3",
+    "@easyops-cn/docusaurus-search-local": "^0.44.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "docusaurus-plugin-openapi-docs": "2.1.0",
